test/should_fail/DuplicateClass.oj
@implementation DuplicateClass
@end

@implementation DuplicateClass
@end
